consistency changes 4